--- a/.travis.yml
+++ b/.travis.yml
@@ -7,17 +7,18 @@ before_install:
 
 script:
   - docker run krismlt015/react-test npm test -- --coverage
-
-after_success:
   - docker build -t krismlt015/multi-client ./client
   - docker build -t krismlt015/multi-nginx ./nginx
   - docker build -t krismlt015/multi-server ./server
   - docker build -t krismlt015/multi-worker ./worker
-  # log in to the docker CLI
+  
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
   - docker push krismlt015/multi-client
   - docker push krismlt015/multi-nginx
   - docker push krismlt015/multi-server
   - docker push krismlt015/multi-worker
+
+# after_success:
+  
 
 
