--- a/.travis.yml
+++ b/.travis.yml
@@ -5,20 +5,20 @@ services:
   - docker
 
 before_install:
-  - docker build -t krismlt015/react-test -f ./client/Dockerfile.dev ./client
+  - docker build -t kfenech2001/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-  - docker run -e CI=true krismlt015/react-test npm test
+  - docker run -e CI=true kfenech2001/react-test npm test
 
 after_success:
-  - docker build -t krismlt015/multi-client ./client
-  - docker build -t krismlt015/multi-nginx ./nginx
-  - docker build -t krismlt015/multi-server ./server
-  - docker build -t krismlt015/multi-worker ./worker
+  - docker build -t kfenech2001/multi-client ./client
+  - docker build -t kfenech2001/multi-nginx ./nginx
+  - docker build -t kfenech2001/multi-server ./server
+  - docker build -t kfenech2001/multi-worker ./worker
   # Log in to the docker CLI
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
   # Take those images and push them to docker hub
-  - docker push krismlt015/multi-client
-  - docker push krismlt015/multi-nginx
-  - docker push krismlt015/multi-server
-  - docker push krismlt015/multi-worker
+  - docker push kfenech2001/multi-client
+  - docker push kfenech2001/multi-nginx
+  - docker push kfenech2001/multi-server
+  - docker push kfenech2001/multi-worker
